samples/_failures_safe/1761729259_13b193_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_570f70f5.c: In function ‘main’:
./samples/SAFE/__tmp_570f70f5.c:158:9: error: expected declaration or statement at end of input
  158 |         int choice;
      |         ^~~
./samples/SAFE/__tmp_570f70f5.c:158:9: error: expected declaration or statement at end of input
